Introduce `CopyShellForm` for ADD/COPY